<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <include layout="@layout/ui_load_layout" />
<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/xml_background_main"
    android:isScrollContainer="true"
    android:scrollbarAlwaysDrawVerticalTrack="true" >

   

            <TextView
                android:id="@+id/forgottentiltle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/forgotten"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/forgottenusername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgottentiltle"
                android:text="@string/forgotten_username"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/forgottenusername_ed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgottenusername"
                android:layout_marginRight="20dp"
                 android:layout_marginLeft="20dp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/forgottenpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgottenusername_ed"
                android:text="@string/forgotten_password"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/forgottenpassword_ed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgottenpassword"
                android:layout_marginRight="20dp"
                 android:layout_marginLeft="20dp"
                android:textColor="@color/white" />

           
            <TextView
                android:id="@+id/forgottenphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgottenpassword_ed"
                android:text="@string/forgotten_phone"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/forgottenphone_ed"
                 android:layout_marginLeft="20dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgottenphone"
                android:layout_marginRight="20dp"
                android:textColor="@color/white" />

          
            <Button
                android:id="@+id/forgottenconfirm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgottenphone_ed"
                android:layout_centerHorizontal="true"
                android:background="@drawable/xml_blue_button"
                android:text="@string/forgotten_confirm"
                android:textColor="@color/white" />
       

</RelativeLayout>

</merge>